feat: Add Personal Environmental Impact Calculator

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -66,6 +66,7 @@
           <li><a href="#animal" class="nav-link">Animals</a></li>
           <li><a href="#environment" class="nav-link">Environment</a></li>
           <li><a href="#quiz" class="nav-link">Kids Zone</a></li>
+          <li><a href="pages/impact-calculator.html" class="nav-link">Calculator</a></li>
           <li><a href="#report" class="nav-link">Report</a></li>
           <li><a href="#contact" class="nav-link">Contact</a></li>
           <li class="nav-auth">
@@ -550,6 +551,32 @@
               </div>
             </div>
           </div>
+
+          <div class="feature-card" data-aos="fade-up" data-aos-delay="300">
+            <div class="card-image">
+              <img
+                src="https://i.pinimg.com/736x/de/0b/3a/de0b3a9531a93b36d25c78b3523307a0.jpg"
+                alt="Impact Calculator"
+              />
+              <div class="card-overlay">
+                <span class="card-tag">Calculator</span>
+              </div>
+            </div>
+            <div class="card-content">
+              <h3>Impact Calculator</h3>
+              <p>
+                Calculate your personal environmental impact and get tips to reduce your carbon footprint.
+              </p>
+              <div class="card-footer">
+                <a href="pages/impact-calculator.html" class="card-btn">
+    Calculate Now <i class="fa-solid fa-arrow-right"></i>
+</a>
+                <div class="card-stats">
+                  <i class="fa-solid fa-calculator"></i> Free Tool
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -740,6 +767,38 @@
     </div>
   </div>
 </section>
+
+    <!-- Impact Calculator CTA Section -->
+    <section class="calculator-cta-section">
+      <div class="section-container">
+        <div class="cta-content" data-aos="zoom-in">
+          <div class="cta-icon">
+            <i class="fa-solid fa-calculator"></i>
+          </div>
+          <h2>Know Your Environmental Impact</h2>
+          <p>
+            Take our comprehensive assessment to understand your carbon footprint and get personalized recommendations to reduce your environmental impact.
+          </p>
+          <div class="cta-features">
+            <div class="cta-feature">
+              <i class="fa-solid fa-chart-pie"></i>
+              <span>Detailed Analysis</span>
+            </div>
+            <div class="cta-feature">
+              <i class="fa-solid fa-lightbulb"></i>
+              <span>Personalized Tips</span>
+            </div>
+            <div class="cta-feature">
+              <i class="fa-solid fa-chart-line"></i>
+              <span>Track Progress</span>
+            </div>
+          </div>
+          <a href="pages/impact-calculator.html" class="btn btn-primary btn-lg">
+            <i class="fa-solid fa-calculator"></i> Calculate Your Impact
+          </a>
+        </div>
+      </div>
+    </section>
 
     <!-- Plant Care Section -->
     <section id="plants" class="plant-care-section">
@@ -1255,6 +1314,18 @@
               <li><a href="#">Waste Segregation</a></li>
               <li><a href="#">Recycling Tips</a></li>
               <li><a href="#">Join Clean-Up Drives</a></li>
+            </ul>
+          </div>
+
+          <!-- Tools -->
+          <div class="footer-col">
+            <h4>Tools</h4>
+            <ul>
+              <li><a href="pages/impact-calculator.html">Impact Calculator</a></li>
+              <li><a href="#carbon">Carbon Footprint</a></li>
+              <li><a href="#quiz">Kids Quiz</a></li>
+              <li><a href="#">Eco Challenges</a></li>
+              <li><a href="#">Green Tips</a></li>
             </ul>
           </div>
 
