added visual earth avatar

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -483,6 +483,36 @@
       </div>
     </div>
   </section>
+<!-- 🌍 Living Earth Avatar -->
+<section class="earth-wrapper">
+  <h2>Living Earth 🌍</h2>
+  <p id="earthText">Earth is healthy and smiling 🌱</p>
+
+  <div class="earth-container">
+    <!-- Sun Rays -->
+    <div class="sun-rays"></div>
+
+    <!-- Earth -->
+    <div id="earth" class="earth happy">
+      🌍
+      <div class="cracks"></div>
+    </div>
+
+    <!-- Rain -->
+    <div class="rain"></div>
+  </div>
+
+  <!-- Demo Buttons (remove in final submission if needed) -->
+  <div class="demo-controls">
+    <button onclick="updateEarth(85)">Happy</button>
+    <button onclick="updateEarth(45)">Sad</button>
+    <button onclick="updateEarth(15)">Critical</button>
+  </div>
+
+  <!-- Sounds -->
+  <audio id="birdsSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_3e3d9e5fd7.mp3"></audio>
+  <audio id="heartSound" src="https://cdn.pixabay.com/download/audio/2021/08/04/audio_8e9b5c07b3.mp3"></audio>
+</section>
 
 
   <!-- Environment Section -->
