added Explore Wildlife Section

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -538,6 +538,81 @@
   </div>
 </section>
 
+<section class="explore-wildlife" id="explore-wildlife">
+  <h2 class="section-title">🌿 Explore Wildlife Conservation</h2>
+  <p class="section-subtitle">
+    Learn how zoos, sanctuaries, and national parks protect wildlife and maintain Earth’s balance.
+  </p>
+
+  <!-- Filters -->
+  <div class="wildlife-filters">
+    <button class="filter-btn active" data-filter="all">All</button>
+    <button class="filter-btn" data-filter="zoo">Zoos</button>
+    <button class="filter-btn" data-filter="sanctuary">Sanctuaries</button>
+    <button class="filter-btn" data-filter="park">National Parks</button>
+  </div>
+
+  <!-- Cards -->
+  <div class="wildlife-grid">
+    <!-- Zoo -->
+    <div class="wildlife-card zoo">
+      <img src="https://images.unsplash.com/photo-1546182990-dffeafbe841d">
+      <h3>Modern Zoos</h3>
+      <p class="short-text">
+        Ethical centers focused on conservation and education.
+      </p>
+
+      <div class="extra-info">
+        <ul>
+          <li>🧬 Breeding endangered species</li>
+          <li>📚 Wildlife education programs</li>
+          <li>🩺 Veterinary care & rescue</li>
+        </ul>
+      </div>
+
+      <button class="learn-btn">Learn More</button>
+    </div>
+
+    <!-- Sanctuary -->
+    <div class="wildlife-card sanctuary">
+      <img src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee">
+      <h3>Wildlife Sanctuaries</h3>
+      <p class="short-text">
+        Safe havens where animals live freely in nature.
+      </p>
+
+      <div class="extra-info">
+        <ul>
+          <li>🐾 Rescues injured animals</li>
+          <li>🌿 Natural, open habitats</li>
+          <li>🚫 No entertainment or cages</li>
+        </ul>
+      </div>
+
+      <button class="learn-btn">Learn More</button>
+    </div>
+
+    <!-- National Park -->
+    <div class="wildlife-card park">
+      <img src="https://images.unsplash.com/photo-1508672019048-805c876b67e2">
+      <h3>National Parks</h3>
+      <p class="short-text">
+        Protected ecosystems preserving biodiversity.
+      </p>
+
+      <div class="extra-info">
+        <ul>
+          <li>🌲 Forest & river conservation</li>
+          <li>🐘 Wildlife corridors</li>
+          <li>🛡️ Anti-poaching patrols</li>
+        </ul>
+      </div>
+
+      <button class="learn-btn">Learn More</button>
+    </div>
+  </div>
+</section>
+
 
   <!-- Environment Section -->
   <section id="environment" class="cards-section alt-bg">
