Added a Animal museum panel in index.html and redesigned the Museum section

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1154,6 +1154,31 @@
 
   </section>
 
+
+  <section class="museum-preview">
+    <div class="museum-banner" data-aos="fade-up">
+        <div class="museum-text">
+            <span class="tag">Explore the Past</span>
+            <h2>The Virtual Sanctuary</h2>
+            <p>Step into our digital archive of nature. Explore exhibits of extinct, endangered, and recovering species in a fully immersive visual journey.</p>
+            <a href="pages/visual-mueseum.html" class="explore-btn">
+                Visit Museum <i class="fas fa-arrow-right"></i>
+            </a>
+        </div>
+        <div class="museum-visuals">
+            <div class="floating-card card-1">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/5/56/Tiger.50.jpg" alt="Tiger">
+            </div>
+            <div class="floating-card card-2">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQvn6lVUkTAw3IUwiw7eqsIL1qUKuROlnZeVfntDyPK_j-C-GYwC4Nf5RG3LtqyQ84VKEoHcG1s7Xl4ZiDMTa1Fojvb-ZfSBiyRk9yNCZPZXA&s=10" alt="Dodo">
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
   <!-- myth fact -->
 
   <section class="myth-fact-section">
