Refactor: externalize internal styles, deduplicate index.html, and fix broken script paths #582

--- a/frontend/pages/Login.html
+++ b/frontend/pages/Login.html
@@ -7,15 +7,7 @@
     <link rel="stylesheet" href="../style.css" />
     <link rel="stylesheet" href="../css/components/Login_SignUp.css" />
     <link rel="icon" type="image/png" href="/envirnoment-logo.png">
-    <style>
-      /* Reset some default styles */
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: Arial, sans-serif;
-      }
-    </style>
+    <link rel="stylesheet" href="../css/components/Login_SignUp.css" />
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
