--- a/frontend/pages/games/MatchIssueSolutionGame.html
+++ b/frontend/pages/games/MatchIssueSolutionGame.html
@@ -5,159 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Eco Card Quest</title>
 
-<style>
-:root {
-  --eco-bg: #eaf7f1;
-  --eco-primary: #2e7d32;
-  --eco-secondary: #66bb6a;
-  --eco-wrong: #e53935;
-}
+<link rel="stylesheet" href="../../css/pages/games/MatchIssueSolutionGame.css">
 
-* {
-  box-sizing: border-box;
-  font-family: "Segoe UI", sans-serif;
-}
-
-body {
-  margin: 0;
-  background: var(--eco-bg);
-  min-height: 100vh;
-}
-
-/* START SCREEN */
-.start-screen {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding: 20px;
-}
-
-.start-screen h1 {
-  color: var(--eco-primary);
-  font-size: 2.2rem;
-}
-
-.start-screen p {
-  max-width: 500px;
-  font-size: 1rem;
-  margin: 10px 0 20px;
-}
-
-.start-options {
-  display: flex;
-  gap: 10px;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.start-options button,
-.start-btn {
-  padding: 12px 18px;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  background: var(--eco-secondary);
-  color: #fff;
-  font-size: 1rem;
-}
-
-.start-btn {
-  margin-top: 20px;
-  background: var(--eco-primary);
-  font-size: 1.2rem;
-  padding: 15px 25px;
-  animation: pulse 1.5s infinite;
-}
-
-header {
-  background: var(--eco-primary);
-  color: #fff;
-  text-align: center;
-  padding: 14px;
-}
-
-.game {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 14px;
-  padding: 16px;
-}
-
-.column {
-  background: #fff;
-  border-radius: 12px;
-  padding: 12px;
-}
-
-.column h2 {
-  text-align: center;
-  color: var(--eco-primary);
-}
-
-.item {
-  padding: 10px;
-  margin: 8px 0;
-  border-radius: 8px;
-  background: #f4fdf7;
-  cursor: pointer;
-  transition: transform 0.2s;
-}
-
-.item:hover {
-  transform: scale(1.02);
-}
-
-.item.selected {
-  border: 2px dashed var(--eco-primary);
-}
-
-.item.correct {
-  background: #e8f5e9;
-  border: 2px solid var(--eco-primary);
-}
-
-.item.wrong {
-  background: #ffebee;
-  border: 2px solid var(--eco-wrong);
-  animation: shake 0.3s;
-}
-
-@keyframes shake {
-  0% { transform: translateX(0); }
-  25% { transform: translateX(-4px); }
-  50% { transform: translateX(4px); }
-  75% { transform: translateX(-4px); }
-  100% { transform: translateX(0); }
-}
-
-@keyframes pulse {
-  0% { transform: scale(1); }
-  50% { transform: scale(1.05); }
-  100% { transform: scale(1); }
-}
-
-footer {
-  text-align: center;
-  padding: 12px;
-  font-weight: bold;
-  color: var(--eco-primary);
-}
-
-.result {
-  display: none;
-  text-align: center;
-  padding: 30px;
-}
-
-@media (max-width: 768px) {
-  .game {
-    grid-template-columns: 1fr;
-  }
-}
-</style>
 
   <link rel="stylesheet" href="../../css/components/footer.css" />
   <link rel="stylesheet" href="../../css/components/navbar.css" />
