--- a/frontend/pages/games/memory-card-game.html
+++ b/frontend/pages/games/memory-card-game.html
@@ -5,181 +5,7 @@
 <title>Eco Memory Match</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<style>
-:root{
-  --green:#2e7d32;
-  --green-dark:#1b5e20;
-  --light:#e8f5e9;
-  --bg:#f4fbf6;
-}
-
-*{
-  box-sizing:border-box;
-  font-family:Poppins,system-ui;
-}
-
-body{
-  margin:0;
-  background:var(--bg);
-}
-
-/* ---------- HEADER ---------- */
-header{
-  background:linear-gradient(135deg,var(--green-dark),var(--green));
-  color:white;
-  text-align:center;
-  padding:28px 15px;
-}
-
-/* ---------- LAYOUT ---------- */
-.container{
-  max-width:1150px;
-  margin:35px auto;
-  display:grid;
-  grid-template-columns:280px 1fr;
-  gap:30px;
-  padding:0 15px;
-}
-
-/* ---------- HOW TO PLAY ---------- */
-.how-to-play{
-  background:white;
-  border-radius:18px;
-  padding:22px;
-  box-shadow:0 12px 30px rgba(0,0,0,.08);
-}
-
-.how-to-play h2{
-  color:var(--green);
-}
-
-/* ---------- GAME ---------- */
-.game-area{
-  background:white;
-  border-radius:22px;
-  padding:25px;
-  box-shadow:0 15px 40px rgba(0,0,0,.1);
-}
-
-.game-top{
-  display:flex;
-  justify-content:space-between;
-  font-weight:600;
-  margin-bottom:20px;
-}
-
-/* ---------- GRID ---------- */
-.grid{
-  display:none;
-  grid-template-columns:repeat(4,82px);
-  gap:16px;
-  justify-content:center;
-  margin:25px 0;
-}
-
-.card{
-  width:82px;
-  height:82px;
-  background:var(--green);
-  border-radius:16px;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-size:28px;
-  color:white;
-  cursor:pointer;
-  box-shadow:0 6px 14px rgba(0,0,0,.15);
-  transition:.3s;
-}
-
-.card.open{
-  background:var(--light);
-  color:var(--green);
-  transform:scale(1.05);
-}
-
-.card.matched{
-  background:#c8e6c9;
-  cursor:default;
-  box-shadow:none;
-}
-
-/* ---------- BUTTONS ---------- */
-.btn-group{
-  display:flex;
-  justify-content:center;
-  gap:18px;
-  margin-top:20px;
-}
-
-.btn{
-  padding:12px 30px;
-  background:var(--green);
-  color:white;
-  border:none;
-  border-radius:30px;
-  cursor:pointer;
-  font-size:1rem;
-}
-
-.btn.secondary{
-  background:#444;
-}
-
-.status-text{
-  text-align:center;
-  color:var(--green);
-  font-weight:600;
-  margin-top:10px;
-}
-
-/* ---------- POPUP (FULL SCREEN CLEAN) ---------- */
-.overlay{
-  position:fixed;
-  inset:0;
-  background:#0f2f18;
-  display:none;
-  align-items:center;
-  justify-content:center;
-  z-index:999;
-}
-
-.popup{
-  background:white;
-  padding:35px;
-  border-radius:22px;
-  text-align:center;
-  width:320px;
-  animation:pop .3s ease;
-}
-
-@keyframes pop{
-  from{transform:scale(.85);opacity:0}
-  to{transform:scale(1);opacity:1}
-}
-
-.popup h2{
-  color:var(--green);
-  margin-bottom:10px;
-}
-
-.popup p{
-  margin-bottom:20px;
-  color:#444;
-}
-
-.popup .btn{
-  width:100%;
-  margin-top:10px;
-}
-
-/* ---------- RESPONSIVE ---------- */
-@media(max-width:768px){
-  .container{
-    grid-template-columns:1fr;
-  }
-}
-</style>
+<link rel="stylesheet" href="../../css/pages/games/memory-card-game.css">
 
   <link rel="stylesheet" href="../../css/components/footer.css" />
   <link rel="stylesheet" href="../../css/components/navbar.css" />
