--- a/frontend/pages/terms-and-conditions.html
+++ b/frontend/pages/terms-and-conditions.html
@@ -7,112 +7,7 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <link rel="icon" type="image/png" href="/envirnoment-logo.png">
-  <style>
-    :root {
-      --primary: #2e7d32;
-      --primary-light: #4caf50;
-      --bg-main: #f4fbf6;
-      --card-bg: #ffffff;
-      --text-dark: #1a1a1a;
-      --text-muted: #555;
-      --shadow: 0 10px 30px rgba(0,0,0,0.08);
-      --radius: 18px;
-    }
-
-    * {
-      box-sizing: border-box;
-      font-family: "Poppins", Arial, sans-serif;
-    }
-
-    body {
-      margin: 0;
-      background: var(--bg-main);
-      color: var(--text-dark);
-    }
-
-   .hero {
-  text-align: center;
-  padding: 90px 20px 80px;
-  background: linear-gradient(
-    180deg,
-    #1b5e20 0%,
-    #2e7d32 45%,
-    #1f6b2a 100%
-  );
-  color: #ffffff;
-  border-bottom-left-radius: 40px;
-  border-bottom-right-radius: 40px;
-}
-
-
-    .badge {
-      display: inline-block;
-      background: #e8f5e9;
-      color: var(--primary);
-      padding: 6px 16px;
-      border-radius: 999px;
-      font-weight: 600;
-      margin-bottom: 12px;
-    }
-
-   .hero h1 {
-  font-size: 3rem;
-  font-weight: 700;
-  margin-bottom: 12px;
-}
-
-.hero p {
-  font-size: 1.1rem;
-  opacity: 0.95;
-}
-
-
-    .container {
-      max-width: 900px;
-      margin: 0 auto 80px;
-      padding: 20px;
-      display: grid;
-      gap: 24px;
-    }
-
-    .card {
-      background: var(--card-bg);
-      border-radius: var(--radius);
-      padding: 28px;
-      box-shadow: var(--shadow);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 20px 40px rgba(0,0,0,0.12);
-    }
-
-    .card h2 {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      color: var(--primary);
-      margin-bottom: 10px;
-    }
-
-    .card i {
-      font-size: 1.4rem;
-      color: var(--primary-light);
-    }
-
-    .card p {
-      line-height: 1.7;
-      color: var(--text-muted);
-    }
-
-    footer {
-      text-align: center;
-      padding: 30px;
-      font-size: 0.9rem;
-      color: #777;
-    }
-  </style>
+  <link rel="stylesheet" href="../css/pages/terms-and-conditions.css">
 
   <link rel="stylesheet" href="../css/components/footer.css" />
   <link rel="stylesheet" href="../css/components/navbar.css" />
