--- a/frontend/pages/environment/sustainable-learning.html
+++ b/frontend/pages/environment/sustainable-learning.html
@@ -9,15 +9,8 @@
 <link rel="stylesheet" href="../../css/pages/environment/kids-learning.css">
 <link rel="stylesheet" href="../../css/pages/environment/climate-learning.css">
 
-<style>
-.sorting-game { display: flex; flex-direction: column; align-items: center; gap: 20px; }
-.items { display: flex; gap: 10px; flex-wrap: wrap; }
-.draggable { padding: 10px 15px; background: #a5d6a7; border-radius: 5px; cursor: grab; user-select: none; }
-.dropzones { display: flex; gap: 50px; margin-top: 20px; }
-.dropzone { min-width: 200px; min-height: 150px; border: 2px dashed #999; border-radius: 5px; padding: 10px; text-align: center; }
-.dropzone h3 { margin-top: 0; }
-.sorting-game button{ margin-top: 10px; padding: 8px 12px; background-color: #4CAF50; color: white; border: none; border-radius: 4px; cursor: pointer; }
-</style>
+<link rel="stylesheet" href="../../css/pages/environment/sustainable-learning.css">
+
 
 
   <link rel="stylesheet" href="../../css/components/footer.css" />
