--- a/frontend/pages/environment/waste-learning.html
+++ b/frontend/pages/environment/waste-learning.html
@@ -9,51 +9,8 @@
 <link rel="stylesheet" href="../../css/pages/environment/kids-learning.css">
 <link rel="stylesheet" href="../../css/pages/environment/climate-learning.css">
 
-<style>
-.calculator-wrapper{
-    margin:20px;
-}
-.calculator-box {
-  padding: 20px;
-  display:flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
-  border-radius: 12px;
-}
+<link rel="stylesheet" href="../../css/pages/environment/waste-learning.css">
 
-.items button {
-  margin: 5px;
-  padding: 10px 15px;
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-  font-size: 16px;
-}
-
-.compost-bin {
-  margin-top: 20px;
-  width:500px;
-  background: #112917;
-  padding: 15px;
-  border-radius: 20px;
-}
-
-#compostItems li {
-  list-style: none;
-  font-size: 16px;
-  color:white;
-  margin: 5px 0;
-}
-
-.calc-result {
-  margin-top: 15px;
-  font-weight: bold;
-  font-size: 16px;
-}
-
-</style>
 
   <link rel="stylesheet" href="../../css/components/footer.css" />
   <link rel="stylesheet" href="../../css/components/navbar.css" />
