--- a/frontend/pages/feeding-awareness.html
+++ b/frontend/pages/feeding-awareness.html
@@ -10,300 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-
-  <style>
-    :root {
-      --primary-green: #2A9D8F;
-      --secondary-green: #8AC926;
-      --accent-green: #219653;
-      --warning-amber: #F4A261;
-      --light-bg: #f9f9f9;
-      --card-bg: #ffffff;
-      --text-dark: #1C1C1C;
-      --text-light: #ffffff;
-    }
-
-    * {
-      box-sizing: border-box;
-      font-family: "Poppins", sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      background: var(--light-bg);
-      color: var(--text-dark);
-      min-height: 100vh;
-      line-height: 1.6;
-    }
-
-    /* ---------- NAVBAR ---------- */
-    .navbar-placeholder {
-      height: 70px;
-      background: var(--card-bg);
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0 2rem;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
-      border-bottom: 2px solid var(--primary-green);
-    }
-
-    .logo {
-      font-size: 1.8rem;
-      font-weight: 700;
-      color: var(--primary-green);
-    }
-
-    .nav-links a {
-      color: var(--text-dark);
-      text-decoration: none;
-      margin-left: 1.5rem;
-      font-weight: 500;
-      padding: 8px 16px;
-      border-radius: 8px;
-      transition: all 0.3s ease;
-    }
-
-    .nav-links a:hover {
-      background: var(--secondary-green);
-      color: var(--text-light);
-      transform: translateY(-2px);
-    }
-
-    .nav-links a.active {
-      background: var(--primary-green);
-      color: var(--text-light);
-      border: 1px solid var(--accent-green);
-    }
-
-    /* ---------- HERO ---------- */
-    .hero {
-      padding: 80px 20px 60px;
-      text-align: center;
-      background: linear-gradient(135deg, var(--primary-green), var(--secondary-green));
-      color: var(--text-light);
-      border-radius: 0 0 30px 30px;
-      margin-bottom: 50px;
-    }
-
-    .hero h1 {
-      font-size: 3rem;
-      font-weight: 800;
-      margin-bottom: 20px;
-    }
-
-    .hero p {
-      font-size: 1.2rem;
-      max-width: 700px;
-      margin: 0 auto;
-      font-weight: 400;
-    }
-
-    /* ---------- CONTAINER ---------- */
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 20px;
-    }
-
-    /* ---------- CARDS ---------- */
-    .main-grid,
-    .dos-donts-grid,
-    .notes-grid {
-      display: grid;
-      gap: 30px;
-    }
-
-    .main-grid,
-    .dos-donts-grid {
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      margin-bottom: 50px;
-    }
-
-    .card {
-      background: var(--card-bg);
-      padding: 30px;
-      border-radius: 20px;
-      border: 2px solid var(--primary-green);
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.05);
-      transition: all 0.3s ease;
-    }
-
-    .card:hover {
-      transform: translateY(-6px);
-      border-color: var(--secondary-green);
-      box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
-    }
-
-    .card h2 {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      margin-bottom: 20px;
-      font-size: 1.6rem;
-      color: var(--primary-green);
-    }
-
-    .card i {
-      font-size: 1.5rem;
-      color: var(--secondary-green);
-    }
-
-    .card ul {
-      padding-left: 20px;
-    }
-
-    .card li {
-      margin-bottom: 12px;
-      font-size: 1rem;
-      position: relative;
-      padding-left: 18px;
-      color: var(--text-dark);
-    }
-
-    .card li::before {
-      content: '✓';
-      color: var(--primary-green);
-      position: absolute;
-      left: 0;
-    }
-
-    /* ---------- DOs & DON'Ts ---------- */
-    .dos-card {
-      border: 2px solid var(--secondary-green);
-    }
-
-    .dos-card h2 {
-      color: var(--secondary-green);
-    }
-
-    .donts-card {
-      border: 2px solid var(--warning-amber);
-    }
-
-    .donts-card h2 {
-      color: var(--warning-amber);
-    }
-
-    .donts-card i {
-      color: var(--warning-amber);
-    }
-
-    /* ---------- IMPORTANT NOTES ---------- */
-    .important-notes {
-      background: #f0fff9;
-      padding: 40px;
-      border-radius: 20px;
-      border: 2px solid var(--primary-green);
-      margin-bottom: 50px;
-    }
-
-    .important-notes h2 {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      margin-bottom: 25px;
-      font-size: 2rem;
-      color: var(--primary-green);
-    }
-
-    .notes-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-    }
-
-    .note-item {
-      background: #ffffff;
-      padding: 20px;
-      border-radius: 15px;
-      border-left: 5px solid var(--secondary-green);
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
-    }
-
-    .note-item h3 {
-      color: var(--secondary-green);
-      margin-bottom: 10px;
-      font-size: 1.2rem;
-    }
-
-    .note-item p {
-      font-size: 1rem;
-      color: var(--text-dark);
-    }
-
-    /* ---------- BACK HOME ---------- */
-    .back-home-wrapper {
-      display: flex;
-      justify-content: center;
-      margin-bottom: 60px;
-    }
-
-    .back-home-btn {
-      padding: 14px 40px;
-      background: var(--primary-green);
-      color: var(--text-light);
-      border: none;
-      border-radius: 30px;
-      font-size: 1.1rem;
-      font-weight: 600;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      transition: all 0.3s ease;
-      box-shadow: 0 8px 20px rgba(42, 157, 143, 0.3);
-    }
-
-    .back-home-btn:hover {
-      background: var(--secondary-green);
-      transform: translateY(-3px);
-      box-shadow: 0 12px 30px rgba(42, 157, 143, 0.5);
-    }
-
-    /* ---------- FOOTER ---------- */
-    footer {
-      text-align: center;
-      padding: 30px;
-      font-size: 0.9rem;
-      color: #555;
-      background: #f9f9f9;
-      border-top: 2px solid var(--primary-green);
-    }
-
-    /* ---------- RESPONSIVE ---------- */
-    @media (max-width: 768px) {
-      .hero h1 {
-        font-size: 2.5rem;
-      }
-
-      .hero p {
-        font-size: 1rem;
-      }
-
-      .card h2 {
-        font-size: 1.4rem;
-      }
-
-      .note-item h3 {
-        font-size: 1.1rem;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .hero h1 {
-        font-size: 2rem;
-      }
-
-      .card li {
-        font-size: 0.95rem;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="../css/pages/feeding-awareness.css">
 
   <link rel="stylesheet" href="../css/components/footer.css" />
   <link rel="stylesheet" href="../css/components/navbar.css" />
