--- a/frontend/pages/games/animal-safety-scenario-game.html
+++ b/frontend/pages/games/animal-safety-scenario-game.html
@@ -7,156 +7,8 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-<style>
-:root{
-  --green:#2e7d32;
-  --green-dark:#1b5e20;
-  --light:#e8f5e9;
-  --bg:#f4fbf6;
-  --wrong:#ffcdd2;
-}
+<link rel="stylesheet" href="../../css/pages/games/animal-safety-scenario-game.css">
 
-*{
-  box-sizing:border-box;
-  font-family:Poppins,system-ui;
-}
-
-body{
-  margin:0;
-  background:var(--bg);
-}
-
-/* ---------- HEADER ---------- */
-header{
-  background:linear-gradient(135deg,var(--green-dark),var(--green));
-  color:white;
-  text-align:center;
-  padding:28px 15px;
-}
-
-header p{
-  margin-top:6px;
-  opacity:.95;
-}
-
-/* ---------- GAME CONTAINER ---------- */
-.game-container{
-  max-width:750px;
-  margin:40px auto;
-  background:white;
-  padding:30px;
-  border-radius:24px;
-  box-shadow:0 20px 45px rgba(0,0,0,.12);
-}
-
-/* ---------- TOP INFO ---------- */
-.top-info{
-  display:flex;
-  justify-content:space-between;
-  margin-bottom:25px;
-  font-weight:600;
-  color:#333;
-}
-
-/* ---------- QUESTION ---------- */
-.scenario{
-  background:var(--light);
-  padding:18px 20px;
-  border-radius:18px;
-  font-size:1.15rem;
-  margin-bottom:25px;
-  line-height:1.5;
-}
-
-/* ---------- OPTIONS ---------- */
-.options{
-  display:grid;
-  gap:15px;
-}
-
-.option{
-  padding:16px 18px;
-  border-radius:16px;
-  background:#f7fbf8;
-  border:2px solid transparent;
-  cursor:pointer;
-  transition:.25s;
-  display:flex;
-  align-items:center;
-  gap:12px;
-  font-size:1rem;
-}
-
-.option i{
-  color:var(--green);
-}
-
-.option:hover{
-  border-color:var(--green);
-  background:var(--light);
-  transform:scale(1.01);
-}
-
-.option.correct{
-  background:#c8e6c9;
-  border-color:var(--green);
-}
-
-.option.wrong{
-  background:var(--wrong);
-  border-color:#c62828;
-}
-
-/* ---------- FEEDBACK ---------- */
-.feedback{
-  margin-top:20px;
-  font-weight:600;
-  text-align:center;
-}
-
-/* ---------- BUTTONS ---------- */
-.center-btn{
-  display:flex;
-  justify-content:center;
-  gap:18px;
-  margin-top:25px;
-}
-
-.btn{
-  padding:12px 30px;
-  border:none;
-  border-radius:30px;
-  background:var(--green);
-  color:white;
-  cursor:pointer;
-  font-size:1rem;
-  box-shadow:0 6px 15px rgba(0,0,0,.15);
-}
-
-.btn.secondary{
-  background:#4caf50;
-}
-
-.btn:hover{
-  background:var(--green-dark);
-}
-
-/* ---------- RESULT ---------- */
-.result{
-  text-align:center;
-  font-size:1.4rem;
-  margin-top:30px;
-  font-weight:600;
-}
-
-/* ---------- RESPONSIVE ---------- */
-@media(max-width:600px){
-  .game-container{
-    margin:20px;
-    padding:22px;
-  }
-}
-</style>
 
   <link rel="stylesheet" href="../../css/components/footer.css" />
   <link rel="stylesheet" href="../../css/components/navbar.css" />
