--- a/frontend/pages/games/eco-card-quest.html
+++ b/frontend/pages/games/eco-card-quest.html
@@ -5,242 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eco Card Quest 🌿</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-
-    body {
-      background: linear-gradient(135deg, #a8e6cf, #dcedc1);
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      padding: 20px;
-    }
-
-    h1 {
-      margin-bottom: 20px;
-      font-size: 3rem;
-      color: #2e7d32;
-      text-align: center;
-      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-      animation: fadeIn 1s ease-in-out;
-    }
-
-    @keyframes fadeIn {
-      0% {
-        opacity: 0;
-        transform: translateY(-20px);
-      }
-
-      100% {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    .controls {
-      margin-bottom: 15px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 15px;
-      flex-wrap: wrap;
-    }
-
-    button {
-      background: linear-gradient(135deg, #43a047, #81c784);
-      color: white;
-      border: none;
-      padding: 12px 20px;
-      border-radius: 12px;
-      cursor: pointer;
-      transition: all 0.3s;
-      font-size: 1rem;
-      font-weight: bold;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    button:hover {
-      transform: scale(1.1);
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-    }
-
-    select {
-      padding: 8px 12px;
-      border-radius: 8px;
-      border: 2px solid #2e7d32;
-      font-size: 1rem;
-      background: white;
-      cursor: pointer;
-    }
-
-    .stats {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-bottom: 15px;
-      flex-wrap: wrap;
-    }
-
-    .stat-card {
-      background: white;
-      padding: 12px 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      font-size: 1.2rem;
-      font-weight: bold;
-      color: #2e7d32;
-      min-width: 120px;
-      text-align: center;
-      transition: transform 0.2s;
-    }
-
-    .stat-card:hover {
-      transform: scale(1.05);
-    }
-
-    #message {
-      margin-bottom: 20px;
-      font-size: 1.5rem;
-      font-weight: bold;
-      color: #2e7d32;
-      display: none;
-      text-align: center;
-      animation: fadeIn 1s ease-in-out;
-    }
-
-    /* Game board using grid */
-    .game-board {
-      display: grid;
-      gap: 15px;
-      justify-content: center;
-      margin-bottom: 30px;
-    }
-
-    .card {
-      perspective: 1000px;
-      cursor: pointer;
-      position: relative;
-      transition: transform 0.3s;
-      border-radius: 12px;
-    }
-
-    .card-inner {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      text-align: center;
-      transition: transform 0.6s;
-      transform-style: preserve-3d;
-    }
-
-    .card.flipped .card-inner {
-      transform: rotateY(180deg);
-    }
-
-    .card-front,
-    .card-back {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      backface-visibility: hidden;
-      border-radius: 12px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      font-size: 1.2rem;
-      transition: all 0.3s;
-    }
-
-    .card-front {
-      background: #fff;
-      border: 3px solid #2e7d32;
-      font-size: 2rem;
-      color: #2e7d32;
-    }
-
-    .card-back {
-      background: linear-gradient(135deg, #43a047, #81c784);
-      color: white;
-      transform: rotateY(180deg);
-      font-weight: bold;
-      font-size: 1rem;
-      text-align: center;
-    }
-
-    .correct {
-      animation: correctAnim 0.8s forwards;
-    }
-
-    @keyframes correctAnim {
-      0% {
-        transform: scale(1);
-      }
-
-      50% {
-        transform: scale(1.2);
-      }
-
-      100% {
-        transform: scale(1);
-      }
-    }
-
-    .incorrect {
-      animation: shake 0.8s;
-    }
-
-    @keyframes shake {
-      0%,
-      100% {
-        transform: translateX(0);
-      }
-
-      20% {
-        transform: translateX(-8px);
-      }
-
-      40% {
-        transform: translateX(8px);
-      }
-
-      60% {
-        transform: translateX(-8px);
-      }
-
-      80% {
-        transform: translateX(8px);
-      }
-    }
-
-    .confetti {
-      position: fixed;
-      width: 10px;
-      height: 10px;
-      top: 0;
-      pointer-events: none;
-      opacity: 0.8;
-      animation: fall 2s linear forwards;
-    }
-
-    @keyframes fall {
-      0% {
-        transform: translateY(0) rotate(0deg);
-      }
-
-      100% {
-        transform: translateY(800px) rotate(720deg);
-        opacity: 0;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="../../css/pages/games/eco-card-quest.css">
 
   <link rel="stylesheet" href="../../css/components/footer.css" />
   <link rel="stylesheet" href="../../css/components/navbar.css" />
