--- a/frontend/pages/games/environment-game.html
+++ b/frontend/pages/games/environment-game.html
@@ -8,246 +8,7 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-<style>
-:root {
-  --green: #22c55e;
-  --dark: #020617;
-  --glass: rgba(255,255,255,0.15);
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-
-body {
-  background: radial-gradient(circle at top, #064e3b, #020617);
-  color: #fff;
-  min-height: 100vh;
-  overflow-x: hidden;
-}
-
-/* ================= HERO ================= */
-.hero {
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  padding: 4rem 1rem;
-}
-
-.hero-box {
-  max-width: 850px;
-  animation: fadeUp 1.2s ease;
-}
-
-.hero h1 {
-  font-size: 3.2rem;
-  margin-bottom: 1rem;
-}
-
-.hero span {
-  color: var(--green);
-}
-
-.hero p {
-  opacity: 0.9;
-  margin-bottom: 2rem;
-}
-
-.start-btn {
-  padding: 1rem 2.8rem;
-  border-radius: 50px;
-  border: none;
-  font-size: 1.1rem;
-  font-weight: 600;
-  cursor: pointer;
-  background: linear-gradient(135deg, #22c55e, #16a34a);
-  color: white;
-  box-shadow: 0 10px 30px rgba(34,197,94,0.4);
-  transition: transform 0.3s ease;
-}
-
-.start-btn:hover {
-  transform: scale(1.08);
-}
-
-/* ================= GAME ================= */
-section {
-  padding: 6rem 1rem;
-  max-width: 1100px;
-  margin: auto;
-}
-
-.game-card {
-  background: var(--glass);
-  backdrop-filter: blur(20px);
-  border-radius: 28px;
-  padding: 3rem;
-  box-shadow: 0 30px 60px rgba(0,0,0,0.5);
-  animation: fadeUp 1.4s ease;
-}
-
-/* ================= EARTH AVATAR ================= */
-.earth-wrapper {
-  text-align: center;
-  margin-bottom: 2.5rem;
-  position: relative;
-}
-
-.earth {
-  width: 160px;
-  height: 160px;
-  border-radius: 50%;
-  background: radial-gradient(circle at 30% 30%, #4ade80, #065f46);
-  margin: auto;
-  position: relative;
-  box-shadow: inset -10px -10px 20px rgba(0,0,0,0.4),
-              0 0 40px rgba(34,197,94,0.6);
-  transition: all 0.5s ease;
-}
-
-.earth::before,
-.earth::after {
-  content: "";
-  position: absolute;
-  background: #fff;
-  border-radius: 50%;
-}
-
-.earth::before {
-  width: 14px;
-  height: 14px;
-  top: 55px;
-  left: 50px;
-}
-
-.earth::after {
-  width: 14px;
-  height: 14px;
-  top: 55px;
-  right: 50px;
-}
-
-.mouth {
-  width: 40px;
-  height: 20px;
-  border-bottom: 4px solid #fff;
-  border-radius: 0 0 40px 40px;
-  position: absolute;
-  bottom: 45px;
-  left: 50%;
-  transform: translateX(-50%);
-  transition: all 0.4s ease;
-}
-
-.earth.sad .mouth {
-  border-bottom: none;
-  border-top: 4px solid #fff;
-  top: 90px;
-}
-
-.earth.cracked {
-  background: radial-gradient(circle, #555, #111);
-  box-shadow: inset -10px -10px 20px rgba(0,0,0,0.7);
-}
-
-.crack {
-  position: absolute;
-  width: 3px;
-  height: 100px;
-  background: #222;
-  top: 30px;
-  left: 50%;
-  transform: translateX(-50%);
-  display: none;
-}
-
-.earth.cracked .crack {
-  display: block;
-}
-
-/* ================= QUESTIONS ================= */
-.question {
-  margin-bottom: 1.6rem;
-}
-
-label {
-  display: block;
-  margin-bottom: 0.4rem;
-  font-weight: 500;
-}
-
-select {
-  width: 100%;
-  padding: 0.9rem;
-  border-radius: 12px;
-  border: none;
-  font-size: 1rem;
-}
-
-/* ================= BUTTON ================= */
-.calculate-btn {
-  margin-top: 2rem;
-  width: 100%;
-  padding: 1rem;
-  border-radius: 50px;
-  border: none;
-  font-size: 1.1rem;
-  font-weight: 600;
-  cursor: pointer;
-  background: linear-gradient(135deg, #4ade80, #22c55e);
-}
-
-/* ================= RESULT ================= */
-.result {
-  margin-top: 2.5rem;
-  text-align: center;
-  display: none;
-}
-
-.score {
-  font-size: 3.2rem;
-  font-weight: 700;
-  color: var(--green);
-}
-
-.badge {
-  margin-top: 0.5rem;
-  font-weight: 600;
-}
-
-.tip {
-  margin-top: 1rem;
-  font-size: 0.95rem;
-  opacity: 0.9;
-}
-
-/* ================= PROGRESS ================= */
-.progress {
-  margin-top: 1.5rem;
-  height: 12px;
-  background: rgba(255,255,255,0.2);
-  border-radius: 10px;
-  overflow: hidden;
-}
-
-.progress-bar {
-  height: 100%;
-  width: 0;
-  background: linear-gradient(90deg, #22c55e, #84cc16);
-  transition: width 1s ease;
-}
-
-/* ================= ANIMATIONS ================= */
-@keyframes fadeUp {
-  from { opacity: 0; transform: translateY(40px); }
-  to { opacity: 1; transform: translateY(0); }
-}
-</style>
+<link rel="stylesheet" href="../../css/pages/games/environment-game.css">
 
   <link rel="stylesheet" href="../../css/components/footer.css" />
   <link rel="stylesheet" href="../../css/components/navbar.css" />
