Fix: Externalize inline scripts from Login.html (#653)
- Create new frontend/js/pages/Login.js file with:
  - togglePassword() function for password visibility
  - handleLoginSubmit() function for form submission
  - initLoginPage() function for DOM initialization
  - Proper documentation and error handling

- Update frontend/pages/Login.html:
  - Remove inline JavaScript blocks
  - Add script tag linking to external Login.js
  - Remove duplicate CSS link

Closes #653

--- a/frontend/pages/Login.html
+++ b/frontend/pages/Login.html
@@ -1,191 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login | EcoLife</title>
-    <link rel="stylesheet" href="../style.css" />
-    <link rel="stylesheet" href="../css/components/Login_SignUp.css" />
-    <link rel="icon" type="image/png" href="/envirnoment-logo.png">
-    <link rel="stylesheet" href="../css/components/Login_SignUp.css" />
-    <!-- Bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-      crossorigin="anonymous"
-    />
-    <!-- font-awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login | EcoLife</title>
+  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="../css/components/Login_SignUp.css" />
+  <link rel="icon" type="image/png" href="/envirnoment-logo.png">
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
+  <!-- font-awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <link rel="stylesheet" href="../css/components/footer.css" />
   <link rel="stylesheet" href="../css/components/navbar.css" />
 </head>
 
-  <body>
+<body>
 
-    <div id="cursor-container"></div>
-<script src="../../js/components/loadComponents.js"></script>
+  <div id="cursor-container"></div>
+  <script src="../../js/components/loadComponents.js"></script>
 
 
   <div id="navbar-container"></div>
-    
-    <section class="auth-section">
-      <div class="auth-container">
-        <!-- Left Side - Image/Info -->
-        <div class="auth-info">
-          <div class="auth-info-content">
-            <img
-              src="https://cdn-icons-png.flaticon.com/512/616/616408.png"
-              alt="EcoLife Logo"
-              class="auth-logo"
-            />
-            <h2>Welcome Back!</h2>
-            <p>
-              Login to continue your journey towards a greener planet and help
-              protect our wildlife.
-            </p>
-            <div class="auth-features">
-              <div class="feature-item">
-                <i class="fa-solid fa-paw"></i>
-                <span>Track Animal Adoptions</span>
-              </div>
-              <div class="feature-item">
-                <i class="fa-solid fa-leaf"></i>
-                <span>Join Environmental Campaigns</span>
-              </div>
-              <div class="feature-item">
-                <i class="fa-solid fa-recycle"></i>
-                <span>Report Pollution Issues</span>
-              </div>
+
+  <section class="auth-section">
+    <div class="auth-container">
+      <!-- Left Side - Image/Info -->
+      <div class="auth-info">
+        <div class="auth-info-content">
+          <img src="https://cdn-icons-png.flaticon.com/512/616/616408.png" alt="EcoLife Logo" class="auth-logo" />
+          <h2>Welcome Back!</h2>
+          <p>
+            Login to continue your journey towards a greener planet and help
+            protect our wildlife.
+          </p>
+          <div class="auth-features">
+            <div class="feature-item">
+              <i class="fa-solid fa-paw"></i>
+              <span>Track Animal Adoptions</span>
             </div>
-          </div>
-        </div>
-
-        <!-- Right Side - Login Form -->
-        <div class="auth-form-container">
-          <div class="auth-form-wrapper">
-            <h2 class="auth-title">Login to EcoLife</h2>
-            <p class="auth-subtitle">
-              Enter your credentials to access your account
-            </p>
-
-            <form class="auth-form" id="loginForm">
-              <div class="form-group">
-                <label for="email">
-                  <i class="fa-solid fa-envelope"></i> Email Address
-                </label>
-                <input
-                  type="email"
-                  id="email"
-                  name="email"
-                  placeholder="Enter your email"
-                  required
-                />
-              </div>
-
-              <div class="form-group">
-                <label for="password">
-                  <i class="fa-solid fa-lock"></i> Password
-                </label>
-                <div class="password-input-wrapper">
-                  <input
-                    type="password"
-                    id="password"
-                    name="password"
-                    placeholder="Enter your password"
-                    required
-                  />
-                  <button
-                    type="button"
-                    class="toggle-password"
-                    onclick="togglePassword('password')"
-                  >
-                    <i class="fa-solid fa-eye" id="password-icon"></i>
-                  </button>
-                </div>
-              </div>
-
-              <div class="form-options">
-                <label class="remember-me">
-                  <input type="checkbox" name="remember" />
-                  <span class="checkmark"></span>
-                  Remember me
-                </label>
-                <a href="forgot-password.html" class="forgot-password">Forgot Password?</a>
-              </div>
-
-              <button type="submit" class="auth-btn">
-                <i class="fa-solid fa-right-to-bracket"></i> Login
-              </button>
-            </form>
-
-            <div class="auth-divider">
-              <span>OR</span>
+            <div class="feature-item">
+              <i class="fa-solid fa-leaf"></i>
+              <span>Join Environmental Campaigns</span>
             </div>
-
-            <div class="social-login">
-              <button class="social-btn google-btn">
-                <i class="fa-brands fa-google"></i> Continue with Google
-              </button>
-              <button class="social-btn github-btn">
-                <i class="fa-brands fa-github"></i> Continue with GitHub
-              </button>
+            <div class="feature-item">
+              <i class="fa-solid fa-recycle"></i>
+              <span>Report Pollution Issues</span>
             </div>
-
-            <p class="auth-switch">
-              Don't have an account? <a href="Signup.html">Sign Up</a>
-            </p>
           </div>
         </div>
       </div>
-    </section>
-    <script
-      src="https://kit.fontawesome.com/a076d05399.js"
-      crossorigin="anonymous"
-    ></script>
-    <script>
-      // Toggle Password Visibility
-      function togglePassword(inputId) {
-        const input = document.getElementById(inputId);
-        const icon = document.getElementById(inputId + "-icon");
 
-        if (input.type === "password") {
-          input.type = "text";
-          icon.classList.remove("fa-eye");
-          icon.classList.add("fa-eye-slash");
-        } else {
-          input.type = "password";
-          icon.classList.remove("fa-eye-slash");
-          icon.classList.add("fa-eye");
-        }
-      }
+      <!-- Right Side - Login Form -->
+      <div class="auth-form-container">
+        <div class="auth-form-wrapper">
+          <h2 class="auth-title">Login to EcoLife</h2>
+          <p class="auth-subtitle">
+            Enter your credentials to access your account
+          </p>
 
-      // Form Submission
-      document
-        .getElementById("loginForm")
-        .addEventListener("submit", function (e) {
-          e.preventDefault();
-            // Simulate Login
-            localStorage.setItem('isLoggedIn', 'true');
-            localStorage.setItem('userName', 'Eco Warrior');
-            
-            alert("Success! Welcome back to EcoLife.");
-            window.location.href = "../index.html";
-        });
-    </script>
-    <script>
-(function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="ws110ZzXAkEnbVsIy9g8d";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
-</script>
+          <form class="auth-form" id="loginForm">
+            <div class="form-group">
+              <label for="email">
+                <i class="fa-solid fa-envelope"></i> Email Address
+              </label>
+              <input type="email" id="email" name="email" placeholder="Enter your email" required />
+            </div>
+
+            <div class="form-group">
+              <label for="password">
+                <i class="fa-solid fa-lock"></i> Password
+              </label>
+              <div class="password-input-wrapper">
+                <input type="password" id="password" name="password" placeholder="Enter your password" required />
+                <button type="button" class="toggle-password" onclick="togglePassword('password')">
+                  <i class="fa-solid fa-eye" id="password-icon"></i>
+                </button>
+              </div>
+            </div>
+
+            <div class="form-options">
+              <label class="remember-me">
+                <input type="checkbox" name="remember" />
+                <span class="checkmark"></span>
+                Remember me
+              </label>
+              <a href="forgot-password.html" class="forgot-password">Forgot Password?</a>
+            </div>
+
+            <button type="submit" class="auth-btn">
+              <i class="fa-solid fa-right-to-bracket"></i> Login
+            </button>
+          </form>
+
+          <div class="auth-divider">
+            <span>OR</span>
+          </div>
+
+          <div class="social-login">
+            <button class="social-btn google-btn">
+              <i class="fa-brands fa-google"></i> Continue with Google
+            </button>
+            <button class="social-btn github-btn">
+              <i class="fa-brands fa-github"></i> Continue with GitHub
+            </button>
+          </div>
+
+          <p class="auth-switch">
+            Don't have an account? <a href="Signup.html">Sign Up</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <!-- External Login JavaScript -->
+  <script src="../js/pages/Login.js"></script>
+  <script>
+    (function () { if (!window.chatbase || window.chatbase("getState") !== "initialized") { window.chatbase = (...arguments) => { if (!window.chatbase.q) { window.chatbase.q = [] } window.chatbase.q.push(arguments) }; window.chatbase = new Proxy(window.chatbase, { get(target, prop) { if (prop === "q") { return target.q } return (...args) => target(prop, ...args) } }) } const onLoad = function () { const script = document.createElement("script"); script.src = "https://www.chatbase.co/embed.min.js"; script.id = "ws110ZzXAkEnbVsIy9g8d"; script.domain = "www.chatbase.co"; document.body.appendChild(script) }; if (document.readyState === "complete") { onLoad() } else { window.addEventListener("load", onLoad) } })();
+  </script>
   <!-- Footer placeholder -->
   <div id="footer-placeholder"></div>
-<script src="/frontend/js/components/footer-loader.js"></script>
+  <script src="/frontend/js/components/footer-loader.js"></script>
 
-    <script src="../js/components/navbar-loader.js"></script>
+  <script src="../js/components/navbar-loader.js"></script>
 </body>
+
 </html>
