Fixed the relative links of components folder

--- a/frontend/pages/forgot-password.html
+++ b/frontend/pages/forgot-password.html
@@ -156,7 +156,7 @@
 </head>
 <body>
 <div id="cursor-container"></div>
-<script src="../../js/components/loadComponents.js"></script>
+
   <div class="forgot-container">
     <h2>Forgot Password</h2>
     <p>
@@ -188,6 +188,6 @@
       <a href="login.html">Back to Login</a>
     </div>
   </div>
-
+<script src="../js/components/component-loader.js"></script>
 </body>
 </html>
