--- a/frontend/pages/Login.html
+++ b/frontend/pages/Login.html
@@ -125,7 +125,7 @@
   </script>
   <!-- Footer placeholder -->
   <div id="footer-placeholder"></div>
-
+<script src="../js/components/component-loader.js"></script>
   <script src="../js/components/component-loader.js"></script>
 </body>
 
