--- a/frontend/pages/animal-safety/animal-first-aid.html
+++ b/frontend/pages/animal-safety/animal-first-aid.html
@@ -426,7 +426,7 @@
     </script>
 <!-- Footer placeholder -->
   <div id="footer-placeholder"></div>
-<script src="/frontend/js/components/footer-loader.js"></script>
+<script src="../../js/components/component-loader.js"></script>
 
     <script src="../../js/components/navbar-loader.js"></script>
 </body>
