--- a/frontend/pages/impact-calculator.html
+++ b/frontend/pages/impact-calculator.html
@@ -572,6 +572,7 @@
 
     <script src="/frontend/js/components/footer-loader.js"></script>
     <script src="../js/components/navbar-loader.js"></script>
+    <script src="../js/components/component-loader.js"></script>
 </body>
 
 </html>
