--- a/frontend/pages/quizzes/quiz.html
+++ b/frontend/pages/quizzes/quiz.html
@@ -111,7 +111,7 @@
     
 
  <script src="/frontend/js/components/footer-loader.js"></script>
-
+<script src="../../js/components/component-loader.js"></script>
     <script src="../../js/components/navbar-loader.js"></script>
 </body>
 </html>
