--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" href="assets/images/others/envirnoment-logo.png">
+  <link rel="manifest" href="manifest.json">
   <title>EcoLife | Protect Our Planet & Animals</title>
   <meta name="description"
     content="Join EcoLife to protect animals, save the environment, and create a greener future for all." />
