Add Wildlife Rescue Mission button to home page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -869,6 +869,10 @@
               style="background: linear-gradient(135deg, #4caf50 0%, #2e7d32 100%); margin-left: 15px;">
               <i class="fa-solid fa-gamepad"></i> Play Waste Game
             </a>
+            <a href="pages/games/rescure-game.html" class="quiz-btn"
+              style="background: linear-gradient(135deg, #ff9800 0%, #f57c00 100%); margin-left: 15px;">
+              <i class="fa-solid fa-shield-alt"></i> Wildlife Rescue Mission
+            </a>
           </div>
 
           <div class="quiz-image" data-aos="fade-left">
