Implemennted animal welfare farming

--- a/frontend/pages/blogs/blog.html
+++ b/frontend/pages/blogs/blog.html
@@ -60,7 +60,7 @@
 
       <div class="stats">
         <div class="stat-item">
-          <span class="stat-number">50+</span>
+          <span class="stat-number">13</span>
           <span class="stat-label">Articles</span>
         </div>
         <div class="stat-item">
@@ -333,6 +333,29 @@
                 class="fa-solid fa-calendar-check"></i> Last updated: January 2026</span>
           </div>
           <div class="read-time"><i class="fa-regular fa-clock"></i> 8 min read</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Blog Card - Animal Welfare in Farming -->
+    <div class="blog-card" data-category="animal"
+      data-sort-title="Animal Welfare in Farming"
+      data-sort-date="2026-01-23"
+      data-sort-popularity="97">
+      <div class="blog-header">
+        <i class="fa-solid fa-tractor"></i>
+        <div class="category">Animal Safety</div>
+      </div>
+      <div class="blog-content">
+        <h3>Animal Welfare in Farming</h3>
+        <p>Discuss the importance of animal welfare in agriculture and how sustainable farming practices can improve conditions for livestock.</p>
+        <div class="card-footer">
+          <div style="display: flex; flex-direction: column; gap: 0.3rem; flex: 1;">
+            <a href="./animal-welfare-farming.html" class="read-more">Read More <i class="fa-solid fa-arrow-right"></i></a>
+            <span style="font-size: 0.8rem; color: var(--text-muted, #999); font-style: italic;"><i
+                class="fa-solid fa-calendar-check"></i> Last updated: January 2026</span>
+          </div>
+          <div class="read-time"><i class="fa-regular fa-clock"></i> 9 min read</div>
         </div>
       </div>
     </div>
