Implemented renewable energy

--- a/frontend/pages/blogs/blog.html
+++ b/frontend/pages/blogs/blog.html
@@ -60,9 +60,7 @@
 
       <div class="stats">
         <div class="stat-item">
-          <span class="stat-number">14</span>
-          <span class="stat-number">13</span>
-          <span class="stat-number">12</span>
+          <span class="stat-number">15</span>
           <span class="stat-label">Articles</span>
         </div>
         <div class="stat-item">
@@ -396,6 +394,29 @@
                 class="fa-solid fa-calendar-check"></i> Last updated: January 2026</span>
           </div>
           <div class="read-time"><i class="fa-regular fa-clock"></i> 8 min read</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Blog Card - Renewable Energy and Wildlife Habitats -->
+    <div class="blog-card" data-category="environment"
+      data-sort-title="Renewable Energy and Wildlife Habitats"
+      data-sort-date="2026-01-23"
+      data-sort-popularity="100">
+      <div class="blog-header">
+        <i class="fa-solid fa-solar-panel"></i>
+        <div class="category">Environment</div>
+      </div>
+      <div class="blog-content">
+        <h3>Renewable Energy and Wildlife Habitats</h3>
+        <p>Analyze the balance between renewable energy development and wildlife conservation, including best practices for coexistence.</p>
+        <div class="card-footer">
+          <div style="display: flex; flex-direction: column; gap: 0.3rem; flex: 1;">
+            <a href="./renewable-energy-wildlife.html" class="read-more">Read More <i class="fa-solid fa-arrow-right"></i></a>
+            <span style="font-size: 0.8rem; color: var(--text-muted, #999); font-style: italic;"><i
+                class="fa-solid fa-calendar-check"></i> Last updated: January 2026</span>
+          </div>
+          <div class="read-time"><i class="fa-regular fa-clock"></i> 10 min read</div>
         </div>
       </div>
     </div>
