Add rewilding blog post

--- a/frontend/pages/blogs/blog.html
+++ b/frontend/pages/blogs/blog.html
@@ -60,7 +60,7 @@
 
       <div class="stats">
         <div class="stat-item">
-          <span class="stat-number">17</span>
+          <span class="stat-number">18</span>
           <span class="stat-label">Articles</span>
         </div>
         <div class="stat-item">
@@ -543,6 +543,29 @@
                 class="fa-solid fa-calendar-check"></i> Last updated: January 2026</span>
           </div>
           <div class="read-time"><i class="fa-regular fa-clock"></i> 10 min read</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Blog Card - Rewilding as a Conservation Strategy -->
+    <div class="blog-card" data-category="environment"
+      data-sort-title="Rewilding as a Conservation Strategy"
+      data-sort-date="2026-01-24"
+      data-sort-popularity="99">
+      <div class="blog-header">
+        <i class="fa-solid fa-tree"></i>
+        <div class="category">Ecosystem Restoration</div>
+      </div>
+      <div class="blog-content">
+        <h3>Rewilding as a Conservation Strategy</h3>
+        <p>Explore rewilding efforts that restore ecosystems by reintroducing keystone species and allowing natural processes to recover.</p>
+        <div class="card-footer">
+          <div style="display: flex; flex-direction: column; gap: 0.3rem; flex: 1;">
+            <a href="./rewilding-conservation-strategy.html" class="read-more">Read More <i class="fa-solid fa-arrow-right"></i></a>
+            <span style="font-size: 0.8rem; color: var(--text-muted, #999); font-style: italic;"><i
+                class="fa-solid fa-calendar-check"></i> Last updated: January 2026</span>
+          </div>
+          <div class="read-time"><i class="fa-regular fa-clock"></i> 12 min read</div>
         </div>
       </div>
     </div>
