--- a/frontend/pages/coral-reef-restoration.html
+++ b/frontend/pages/coral-reef-restoration.html
@@ -26,8 +26,26 @@
 
   <!-- HERO -->
   <section class="hero">
-    <h1>🪸 Coral Reef Restoration Technologies</h1>
-    <p>Discover innovative methods and cutting-edge technologies used to restore and rehabilitate damaged coral reefs worldwide.</p>
+    <div class="hero-content">
+      <h1>🪸 Coral Reef Restoration Technologies</h1>
+      <p>Discover innovative methods and cutting-edge technologies used to restore and rehabilitate damaged coral reefs worldwide.</p>
+      <div class="hero-stats">
+        <div class="hero-stat">
+          <span class="hero-stat-number">500M+</span>
+          <span class="hero-stat-label">People depend on reefs</span>
+        </div>
+        <div class="hero-stat">
+          <span class="hero-stat-number">$30B</span>
+          <span class="hero-stat-label">Annual economic value</span>
+        </div>
+      </div>
+    </div>
+    <div class="hero-decoration">
+      <div class="floating-element coral-1">🪸</div>
+      <div class="floating-element coral-2">🐠</div>
+      <div class="floating-element coral-3">🐢</div>
+      <div class="floating-element coral-4">🌊</div>
+    </div>
   </section>
 
   <!-- CONTENT -->
@@ -37,6 +55,41 @@
     <div class="content-section">
       <h2><i class="fas fa-water"></i> The Coral Reef Crisis</h2>
       <p>Coral reefs are among the most diverse and valuable ecosystems on Earth, yet they face unprecedented threats from climate change, pollution, and human activities. Innovative restoration technologies offer hope for reviving these underwater treasures.</p>
+
+      <!-- Global Status -->
+      <div class="global-status">
+        <h3>🌍 Global Coral Reef Status</h3>
+        <div class="status-indicators">
+          <div class="status-item">
+            <div class="status-bar">
+              <div class="status-fill" style="width: 50%"></div>
+            </div>
+            <div class="status-info">
+              <span class="status-label">Healthy Reefs</span>
+              <span class="status-percentage">50%</span>
+            </div>
+          </div>
+          <div class="status-item">
+            <div class="status-bar">
+              <div class="status-fill critical" style="width: 30%"></div>
+            </div>
+            <div class="status-info">
+              <span class="status-label">At Risk</span>
+              <span class="status-percentage">30%</span>
+            </div>
+          </div>
+          <div class="status-item">
+            <div class="status-bar">
+              <div class="status-fill danger" style="width: 20%"></div>
+            </div>
+            <div class="status-info">
+              <span class="status-label">Critically Endangered</span>
+              <span class="status-percentage">20%</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="stats-grid">
         <div class="stat-item">
           <div class="stat-number">50%</div>
@@ -56,37 +109,63 @@
     <!-- Restoration Methods -->
     <div class="content-section">
       <h2><i class="fas fa-seedling"></i> Innovative Restoration Methods</h2>
+      <p>Explore the cutting-edge techniques revolutionizing coral reef restoration worldwide.</p>
       <div class="methods-grid">
-        <div class="method-card">
-          <i class="fas fa-leaf"></i>
+        <div class="method-card featured">
+          <div class="card-header">
+            <i class="fas fa-leaf"></i>
+            <span class="card-badge">Most Used</span>
+          </div>
           <h3>Coral Farming</h3>
           <p>Land-based and ocean-based nurseries where coral fragments are grown in controlled environments before transplantation to damaged reefs.</p>
           <div class="method-details">
             <strong>Techniques:</strong> Microfragmentation, macrofragmentation, and sexual reproduction enhancement.
           </div>
+          <div class="method-stats">
+            <span>85% Success Rate</span>
+            <span>50+ Projects</span>
+          </div>
         </div>
         <div class="method-card">
-          <i class="fas fa-cubes"></i>
+          <div class="card-header">
+            <i class="fas fa-cubes"></i>
+          </div>
           <h3>3D Reef Structures</h3>
           <p>Artificial reef structures created using 3D printing technology to provide stable substrates for coral settlement and growth.</p>
           <div class="method-details">
             <strong>Materials:</strong> Biodegradable and permanent structures designed to mimic natural reef topography.
           </div>
+          <div class="method-stats">
+            <span>70% Coral Growth</span>
+            <span>25+ Installations</span>
+          </div>
         </div>
         <div class="method-card">
-          <i class="fas fa-microscope"></i>
+          <div class="card-header">
+            <i class="fas fa-microscope"></i>
+          </div>
           <h3>Genetic Technologies</h3>
           <p>Advanced genetic techniques to develop coral strains that are more resilient to bleaching, disease, and environmental stressors.</p>
           <div class="method-details">
             <strong>Methods:</strong> Selective breeding, gene editing, and assisted evolution.
           </div>
+          <div class="method-stats">
+            <span>90% Heat Resistance</span>
+            <span>Research Phase</span>
+          </div>
         </div>
         <div class="method-card">
-          <i class="fas fa-robot"></i>
+          <div class="card-header">
+            <i class="fas fa-robot"></i>
+          </div>
           <h3>Autonomous Systems</h3>
           <p>Robotic systems and drones used for reef monitoring, maintenance, and automated restoration tasks.</p>
           <div class="method-details">
             <strong>Applications:</strong> Underwater drones for coral transplantation and AI-powered monitoring systems.
+          </div>
+          <div class="method-stats">
+            <span>24/7 Monitoring</span>
+            <span>Emerging Tech</span>
           </div>
         </div>
       </div>
@@ -95,29 +174,54 @@
     <!-- Case Studies -->
     <div class="content-section">
       <h2><i class="fas fa-map-marker-alt"></i> Success Stories</h2>
+      <p>Real-world examples of coral restoration projects making a measurable impact.</p>
       <div class="case-studies">
-        <div class="case-study">
-          <h3>Great Barrier Reef, Australia</h3>
+        <div class="case-study featured">
+          <div class="case-header">
+            <h3>Great Barrier Reef, Australia</h3>
+            <div class="case-location">🇦🇺</div>
+          </div>
           <p>The largest coral restoration project in the world, involving millions of corals grown in nurseries and transplanted to damaged areas.</p>
           <div class="case-metrics">
             <span>5M+ corals planted</span>
             <span>85% survival rate</span>
+            <span>$100M invested</span>
+          </div>
+          <div class="case-timeline">
+            <span class="timeline-year">2017</span>
+            <span class="timeline-status">Ongoing</span>
           </div>
         </div>
         <div class="case-study">
-          <h3>Hawaii Coral Restoration</h3>
+          <div class="case-header">
+            <h3>Hawaii Coral Restoration</h3>
+            <div class="case-location">🇺🇸</div>
+          </div>
           <p>Pioneering work in developing heat-resistant coral strains through selective breeding and genetic research.</p>
           <div class="case-metrics">
             <span>20+ coral species</span>
             <span>90% bleaching resistance</span>
+            <span>15 years research</span>
+          </div>
+          <div class="case-timeline">
+            <span class="timeline-year">2005</span>
+            <span class="timeline-status">Active</span>
           </div>
         </div>
         <div class="case-study">
-          <h3>Florida Keys, USA</h3>
+          <div class="case-header">
+            <h3>Florida Keys, USA</h3>
+            <div class="case-location">🇺🇸</div>
+          </div>
           <p>Implementation of 3D-printed reef structures combined with coral farming techniques for rapid reef rehabilitation.</p>
           <div class="case-metrics">
             <span>100+ artificial structures</span>
             <span>70% coral coverage increase</span>
+            <span>5 year project</span>
+          </div>
+          <div class="case-timeline">
+            <span class="timeline-year">2018</span>
+            <span class="timeline-status">Completed</span>
           </div>
         </div>
       </div>
@@ -149,16 +253,43 @@
     <!-- Get Involved -->
     <div class="content-section">
       <h2><i class="fas fa-hands-helping"></i> Get Involved</h2>
+      <p>Join the global effort to restore coral reefs. Your participation can make a real difference.</p>
       <div class="action-buttons">
-        <button class="action-btn" onclick="exploreProjects()">
-          <i class="fas fa-search"></i> Find Restoration Projects
+        <button class="action-btn primary" onclick="exploreProjects()">
+          <i class="fas fa-search"></i>
+          <div class="btn-content">
+            <span class="btn-title">Find Projects</span>
+            <span class="btn-subtitle">Explore restoration initiatives</span>
+          </div>
         </button>
-        <button class="action-btn" onclick="learnTechniques()">
-          <i class="fas fa-graduation-cap"></i> Learn Restoration Techniques
+        <button class="action-btn secondary" onclick="learnTechniques()">
+          <i class="fas fa-graduation-cap"></i>
+          <div class="btn-content">
+            <span class="btn-title">Learn Techniques</span>
+            <span class="btn-subtitle">Master restoration methods</span>
+          </div>
         </button>
-        <button class="action-btn" onclick="supportResearch()">
-          <i class="fas fa-donate"></i> Support Research
+        <button class="action-btn coral" onclick="supportResearch()">
+          <i class="fas fa-donate"></i>
+          <div class="btn-content">
+            <span class="btn-title">Support Research</span>
+            <span class="btn-subtitle">Fund innovative solutions</span>
+          </div>
         </button>
+      </div>
+      <div class="involvement-stats">
+        <div class="involvement-stat">
+          <span class="stat-number">150+</span>
+          <span class="stat-label">Active Projects</span>
+        </div>
+        <div class="involvement-stat">
+          <span class="stat-number">50+</span>
+          <span class="stat-label">Countries Involved</span>
+        </div>
+        <div class="involvement-stat">
+          <span class="stat-number">$500M+</span>
+          <span class="stat-label">Annual Investment</span>
+        </div>
       </div>
     </div>
 
