--- a/frontend/pages/sitemap.html
+++ b/frontend/pages/sitemap.html
@@ -87,6 +87,7 @@
               <li><a href="../index.html#plant-care"><i class="fas fa-chevron-right"></i> Plant Care</a></li>
               <li><a href="disease-spillover.html"><i class="fas fa-chevron-right"></i> Disease Spillover</a></li>
               <li><a href="microplastic-terrestrial-animals.html"><i class="fas fa-chevron-right"></i> Microplastic Impact</a></li>
+              <li><a href="scavenger-decline.html"><i class="fas fa-chevron-right"></i> Scavenger Decline & Disease Risk</a></li>
               <li><a href="../index.html#report-form"><i class="fas fa-chevron-right"></i> Report Environmental Issues</a></li>
             </ul>
           </div>
