Change color to white

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -170,16 +170,18 @@
     body:not([data-theme="dark"]) .hero-content p,
     body:not([data-theme="dark"]) .hero-content span:not(.gradient-text),
     body:not([data-theme="dark"]) .hero-content div:not(.btn) {
-      color: #333333 !important;
+      color: whitesmoke !important;
     }
+
 
     /* Fix gradient text for light theme */
     body:not([data-theme="dark"]) .gradient-text {
-      background: linear-gradient(135deg, #1b5e20, #2e7d32) !important;
-      -webkit-background-clip: text !important;
-      -webkit-text-fill-color: transparent !important;
-      background-clip: text !important;
+      color: whitesmoke !important;
+      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+      background: none !important;
+      -webkit-text-fill-color: whitesmoke !important;
     }
+    
 
     /* Add subtle text shadow for better contrast */
     body:not([data-theme="dark"]) .hero-subtitle {
